@@ -116,6 +116,138 @@ static void lineClosestApproach (const dVector3 pa, const dVector3 ua,
 }
 
 
+// given two line segments A and B with endpoints a1-a2 and b1-b2, return the
+// points on A and B that are closest to each other (in cp1 and cp2).
+// in the case of parallel lines where there are multiple solutions, a
+// solution involving the endpoint of at least one line will be returned.
+// this will work correctly for zero length lines, e.g. if a1==a2 and/or
+// b1==b2.
+//
+// the algorithm works by applying the voronoi clipping rule to the features
+// of the line segments. the three features of each line segment are the two
+// endpoints and the line between them. the voronoi clipping rule states that,
+// for feature X on line A and feature Y on line B, the closest points PA and
+// PB between X and Y are globally the closest points if PA is in V(Y) and
+// PB is in V(X), where V(X) is the voronoi region of X.
+
+
+void dClosestLineSegmentPoints (dVector3 const a1, dVector3 const a2,
+				dVector3 const b1, dVector3 const b2,
+				dVector3 cp1, dVector3 cp2)
+{
+  dVector3 a1a2,b1b2,a1b1,a1b2,a2b1,a2b2,n;
+  dReal la,lb,k,da1,da2,da3,da4,db1,db2,db3,db4,det;
+
+#define SET2(a,b) a[0]=b[0]; a[1]=b[1]; a[2]=b[2];
+#define SET3(a,b,op,c) a[0]=b[0] op c[0]; a[1]=b[1] op c[1]; a[2]=b[2] op c[2];
+
+  // check vertex-vertex features
+
+  SET3 (a1a2,a2,-,a1);
+  SET3 (b1b2,b2,-,b1);
+  SET3 (a1b1,b1,-,a1);
+  da1 = dDOT(a1a2,a1b1);
+  db1 = dDOT(b1b2,a1b1);
+  if (da1 <= 0 && db1 >= 0) {
+    SET2 (cp1,a1);
+    SET2 (cp2,b1);
+    return;
+  }
+
+  SET3 (a1b2,b2,-,a1);
+  da2 = dDOT(a1a2,a1b2);
+  db2 = dDOT(b1b2,a1b2);
+  if (da2 <= 0 && db2 <= 0) {
+    SET2 (cp1,a1);
+    SET2 (cp2,b2);
+    return;
+  }
+
+  SET3 (a2b1,b1,-,a2);
+  da3 = dDOT(a1a2,a2b1);
+  db3 = dDOT(b1b2,a2b1);
+  if (da3 >= 0 && db3 >= 0) {
+    SET2 (cp1,a2);
+    SET2 (cp2,b1);
+    return;
+  }
+
+  SET3 (a2b2,b2,-,a2);
+  da4 = dDOT(a1a2,a2b2);
+  db4 = dDOT(b1b2,a2b2);
+  if (da4 >= 0 && db4 <= 0) {
+    SET2 (cp1,a2);
+    SET2 (cp2,b2);
+    return;
+  }
+
+  // check edge-vertex features.
+  // if one or both of the lines has zero length, we will never get to here,
+  // so we do not have to worry about the following divisions by zero.
+
+  la = dDOT(a1a2,a1a2);
+  if (da1 >= 0 && da3 <= 0) {
+    k = da1 / la;
+    SET3 (n,a1b1,-,k*a1a2);
+    if (dDOT(b1b2,n) >= 0) {
+      SET3 (cp1,a1,+,k*a1a2);
+      SET2 (cp2,b1);
+      return;
+    }
+  }
+
+  if (da2 >= 0 && da4 <= 0) {
+    k = da2 / la;
+    SET3 (n,a1b2,-,k*a1a2);
+    if (dDOT(b1b2,n) <= 0) {
+      SET3 (cp1,a1,+,k*a1a2);
+      SET2 (cp2,b2);
+      return;
+    }
+  }
+
+  lb = dDOT(b1b2,b1b2);
+  if (db1 <= 0 && db2 >= 0) {
+    k = -db1 / lb;
+    SET3 (n,-a1b1,-,k*b1b2);
+    if (dDOT(a1a2,n) >= 0) {
+      SET2 (cp1,a1);
+      SET3 (cp2,b1,+,k*b1b2);
+      return;
+    }
+  }
+
+  if (db3 <= 0 && db4 >= 0) {
+    k = -db3 / lb;
+    SET3 (n,-a2b1,-,k*b1b2);
+    if (dDOT(a1a2,n) <= 0) {
+      SET2 (cp1,a2);
+      SET3 (cp2,b1,+,k*b1b2);
+      return;
+    }
+  }
+
+  // it must be edge-edge
+
+  k = dDOT(a1a2,b1b2);
+  det = la*lb - k*k;
+  if (det <= 0) {
+    // this should never happen, but just in case...
+    SET2(cp1,a1);
+    SET2(cp2,b1);
+    return;
+  }
+  det = dRecip (det);
+  dReal alpha = (lb*da1 -  k*db1) * det;
+  dReal beta  = ( k*da1 - la*db1) * det;
+  SET3 (cp1,a1,+,alpha*a1a2);
+  SET3 (cp2,b1,+,beta*b1b2);
+
+# undef SET2
+# undef SET3
+}
+
+
 // given a box (R,side), `R' is the rotation matrix for the box, and `side'
 // is a vector of x/y/z side lengths, return the size of the interval of the
 // box projected along the given axis. if the axis has unit length then the
