@@ -9,6 +9,10 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+09/08/02 russ
+
+	* added dClosestLineSegmentPoints().
+
 08/28/02 russ
 
 	* added dJointSetFeedback() and dJointGetFeedback().
